# object-movment-simulator

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  InitialTask.md  LICENSE  README.md  Simulator.py  pyproject.toml  requirements.txt  run.sh  tests.md  todo.md
adapter/: base.py  console_adapter.py  file_adapter.py  json_adapter.py  network_adapter.py
controller/: app.py  renderer.py  ui.py
logic/: engine.py  interpolator.py  messages.py  models.py
specs/: README.md
specs/done/spec_1/: bdd_spec_1.md  spec.md  tests.md  todo.md
specs/done/spec_2/: bdd_spec_2.md  spec.md  tests.md  todo.md
specs/done/spec_3/: bdd_spec_3.md  spec.md  tests.md  todo.md
specs/done/spec_4/: bdd_spec_4.md  design_spec.md  spec.md  todo.md
tests/: conftest.py  test_adapters.py  test_app.py  test_engine.py  test_integration.py  test_interpolator.py  test_models.py  test_renderer.py  test_ui.py
